<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_dialog_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_change_avatar_title"
        android:textSize="25sp">
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutImagesViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/cam_icon"
                app:srcCompat="@drawable/ic_cam"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/ic_cam" />

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/gallery_icon"
                app:srcCompat="@drawable/ic_gallery"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/ic_gallery" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/cancel_icon"
                app:layout_constraintStart_toEndOf="@+id/gallery"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title"
                app:srcCompat="@drawable/ic_cancel"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/ic_cancel" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cameraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cam_text"
                android:translationX="22dp" />

            <TextView
                android:id="@+id/galleryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_text"
                android:translationX="40dp" />

            <TextView
                android:id="@+id/cancelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:translationX="63dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>